--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -7,6 +7,7 @@ $text-color: #9a9a98;
 
 // breakpoint 
 $breakpoint1248: 1248 + px;
+$breakpoint1140: 1140 + px;
 $breakpoint1024: 1024 + px;
 $breakpoint992: 992 + px;
 $breakpoint768: 768 + px;
