--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -8,6 +8,13 @@
             font-size: 48px;
             line-height: 130%;
             color: $black;
+
+            @media(max-width: $breakpoint768) {
+                font-size: 44px;
+            }
+            @media(max-width: $breakpoint480) {
+                font-size: 40px;
+            }
         }
         &-text {
             margin-top: 10px;
@@ -16,6 +23,15 @@
             font-size: 20px;
             line-height: 130%;
             color: $text-color;
+
+            @media(max-width: $breakpoint768) {
+                margin-top: 24px;
+                font-size: 18px;
+            }
+            @media(max-width: $breakpoint480) {
+                margin-top: 18px;
+                font-size: 16px;
+            }
         }
     }
 
@@ -25,6 +41,17 @@
         display: grid;
         grid-template-columns: 390px 320px 350px;
         justify-content: space-between;
+        gap: 16px;
+
+        @media(max-width: $breakpoint1140) {
+            grid-template-columns: 35% 30% 32%;
+        }
+        @media(max-width: $breakpoint992) {
+            grid-template-columns: 1fr;
+        }
+        @media(max-width: $breakpoint480) {
+            margin-top: 18px;
+        }
     }
 
     &__item {
@@ -33,6 +60,10 @@
 
         &:not(:first-child) {
             margin-top: calc(var(--pos) * 80px);
+
+            @media(max-width: $breakpoint992) {
+                margin-top: 0;
+            }
         }
         
         &-name {
@@ -45,6 +76,10 @@
             text-transform: uppercase;
             color: $main-color;
 
+            @media(max-width: $breakpoint1140) {
+                font-size: 40px;
+            }
+
             &::before {
                 content: url(../assets/img/icons/i-arrowUp.png);
             }
@@ -54,6 +89,13 @@
             font-size: 20px;
             line-height: 130%;
             color: #000;
+
+            @media(max-width: $breakpoint1140) {
+                font-size: 18px;
+            }
+            @media(max-width: $breakpoint480) {
+                font-size: 16px;
+            }
         }
         &-text {
             margin-top: 20px;
@@ -62,12 +104,29 @@
             font-size: 20px;
             line-height: 130%;
             color: $text-color;
+
+            @media(max-width: $breakpoint1140) {
+                margin-top: 8px;
+
+                font-size: 18px;
+            }
+            @media(max-width: $breakpoint768) {
+                max-width: 620px;
+            }
+            @media(max-width: $breakpoint480) {
+                max-width: 310px;
+                font-size: 16px;
+            }
         }
     }
 
     &__bottom {
         margin-top: -40px;
         position: relative;
+
+        @media(max-width: $breakpoint768) {
+            margin-top: 0;
+        }
 
         &::before {
             position: absolute;
@@ -81,11 +140,38 @@
 
             height: 195px;
             z-index: 1;
+
+            @media(max-width: $breakpoint768) {
+                height: 145px;
+            }
+            @media(max-width: $breakpoint480) {
+                height: 100px;
+                bottom: 55px;
+            }
+            @media(max-width: $breakpoint375) {
+                height: 80px;
+                bottom: 40px;
+            }
         }
 
         &-img {
             position: relative;
             z-index: 2;
+
+            @media(max-width: $breakpoint768) {
+                transform: scale(-1, 1);
+                display: flex;
+                justify-self: right;
+
+                max-width: 510px;
+                width: 100%;
+            }
+            @media(max-width: $breakpoint480) {
+                max-width: 370px;
+                transform: unset;
+
+                justify-self: left;
+            }
         }
     }
 }
