--- a/scss/blocks/_bottom-menu.scss
+++ b/scss/blocks/_bottom-menu.scss
@@ -5,6 +5,10 @@
 
     &:not(:first-child) {
         margin-top: 18px;
+
+        @media(max-width: $breakpoint660) {
+            margin-top: 14px;
+        }
     }
 
     &__item {
@@ -17,6 +21,10 @@
                 font-size: 20px;
                 line-height: 130%;
                 color: #f8f8f8;
+
+                @media(max-width: $breakpoint660) {
+                    font-size: 18px;
+                }
             }
         }
         & > a {
@@ -25,6 +33,10 @@
             line-height: 120%;
             color: #9a9a98;
             transition: color .2s;
+
+            @media(max-width: $breakpoint660) {
+                font-size: 16px;
+            }
 
             &:hover {
                 color: #fff;
