--- a/scss/blocks/_consult-form.scss
+++ b/scss/blocks/_consult-form.scss
@@ -1,10 +1,14 @@
 .consult-form {
-    margin-top: 24px;
+    // margin-top: 24px;
 
     &__wrapper {
         display: flex;
         flex-direction: column;
         gap: 18px;
+
+        @media(max-width: $breakpoint480) {
+            gap: 16px;
+        }
     }
     &__input {
         padding: 10px 24px;
@@ -15,6 +19,15 @@
 
         display: flex;
         justify-content: space-between;
+
+        @media(max-width: $breakpoint480) {
+            margin-top: 26px;
+            gap: 20px;
+        }
+        @media(max-width: $breakpoint375) {
+            flex-direction: column;
+            gap: 12px;
+        }
     }
 
     &__btn {    
@@ -65,5 +78,9 @@
         font-size: 12px;
         line-height: 130%;
         color: $text-color;
+
+        @media(max-width: $breakpoint375) {
+            max-width: 100%;
+        }
     }
 }
