--- a/scss/blocks/_footer-contacts.scss
+++ b/scss/blocks/_footer-contacts.scss
@@ -12,12 +12,20 @@
             font-size: 18px;
             line-height: 130%;
             color: #f8f8f8;
+
+            @media(max-width: $breakpoint660) {
+                font-size: 16px;
+            }
         }
         & > a {
             font-weight: 700;
             font-size: 20px;
             line-height: 130%;
             color: $main-color;
+
+            @media(max-width: $breakpoint660) {
+                font-size: 18px;
+            }
         }
     }
 }
