--- a/scss/blocks/_footer-menu.scss
+++ b/scss/blocks/_footer-menu.scss
@@ -3,7 +3,21 @@
     
     display: flex;
     align-items: center;
-    gap: 48px;
+    justify-content: space-between;
+    gap: 32px;
+
+    @media(max-width: $breakpoint1024) {
+        justify-content: flex-start;
+    }
+    @media(max-width: $breakpoint660) {
+        margin-top: 20px;
+        
+        align-items: flex-start;
+        flex-direction: column;
+        gap: 8px;
+
+        order: 2;
+    }
 
     &__item {
         display: flex;
