--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+    position: relative;
     margin-block-start: auto;
 
     padding: 30px 0 24px 0;
@@ -6,6 +7,10 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
+    @media(max-width: $breakpoint480) {
+        padding: 20px 0 16px;
+    }
 
     &__wrapper {
        display: flex;
@@ -18,8 +23,26 @@
         justify-content: space-between;
 
         padding-bottom: 18px;
+
+        @media(max-width: $breakpoint1024) {
+            grid-template-columns: 1fr;
+            gap: 66px;
+
+            padding-bottom: 66px;
+        }
+        @media(max-width: $breakpoint660) {
+            gap: 24px;
+        }
+        @media(max-width: $breakpoint480) {
+            padding-bottom: 54px;
+        }
     }
     &__left {
+
+        @media(max-width: $breakpoint660) {
+            display: flex;
+            flex-direction: column;
+        }
 
         &-logo-block {
             display: flex;
@@ -29,6 +52,10 @@
                 position: relative;
                 padding-left: 21px;
 
+                @media(max-width: $breakpoint480) {
+                    padding-left: 17px;
+                }
+
                 & > p {
                     font-weight: 600;
                     font-size: 14px;
@@ -37,6 +64,14 @@
                     color: #fff;
 
                     width: 135px;
+
+                    @media(max-width: $breakpoint992) {
+                        font-size: 12px;
+                    }
+                    @media(max-width: $breakpoint480) {
+                        font-size: 10px;
+                        width: 100px;
+                    }
                 }
 
                 &::before {
@@ -60,6 +95,17 @@
         justify-content: space-around;
 
         padding-top: 30px;
+
+        @media(max-width: $breakpoint1024) {
+            justify-content: space-between;
+        }
+        @media(max-width: $breakpoint480) {
+            padding-top: 40px;
+            
+            flex-direction: column;
+            align-items: center;
+            gap: 8px;
+        }
 
         &::before, &::after {
             content: '';
@@ -91,6 +137,8 @@
 
             position: absolute;
             top: -25px;
+            left: 50%;
+            transform: translateX(-50%);
 
             &:hover {
 
@@ -123,6 +171,10 @@
                 font-size: 20px;
                 line-height: 130%;
                 color: #f8f8f8;
+
+                @media(max-width: $breakpoint768) {
+                    display: none;
+                }
             }
         }
     }
