--- a/scss/blocks/_header-contacts.scss
+++ b/scss/blocks/_header-contacts.scss
@@ -100,6 +100,7 @@
         &-content {
             display: none;
             overflow: hidden;
+            z-index: 2;
 
             position: absolute;
             top: calc(100% + 10px);
