--- a/scss/blocks/_info-list.scss
+++ b/scss/blocks/_info-list.scss
@@ -18,6 +18,10 @@
             font-size: 18px;
             line-height: 120%;
             color: #9a9a98;
+
+            @media(max-width: $breakpoint660) {
+                font-size: 16px;
+            }
         }
     }
     &:not(:first-child) {
