--- a/scss/blocks/_leasing.scss
+++ b/scss/blocks/_leasing.scss
@@ -87,14 +87,16 @@
         text-align: center;
         color: #fff;
 
-        padding: 20px 26px;
+        padding: 19px 26px;
         background: $main-color;
         border-radius: 25px;
+        border: 1px solid $main-color;
         
         height: fit-content;
         width: fit-content;
 
         flex-shrink: 0;
+        transition: all .3s;
 
         @media(max-width: $breakpoint480) {
             font-size: 16px;
@@ -119,6 +121,11 @@
             @media(max-width: $breakpoint480) {
                 margin-top: 28px;
             }
+        }
+
+        &:hover {
+            background: transparent;
+            color: $main-color;
         }
     }
 }
