--- a/scss/blocks/_section.scss
+++ b/scss/blocks/_section.scss
@@ -35,19 +35,29 @@
 }
 
 .about-section {
-
+    margin-top: 48px;
 }
 
 .consult-section {
-    margin-top: 50px;
     padding: 36px 50px;
 
     background: url(../assets/img/bg/consult-bg.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+
+    @media(max-width: $breakpoint992) {
+        padding: 36px 0;
+    }
+    @media(max-width: $breakpoint480) {
+        padding: 28px 0;
+    }
 }
 
 .leaders-section {
-    padding: 80px 50px;
+    padding: 80px 0;
+
+    @media(max-width: $breakpoint480) {
+        padding: 54px 0 28px;
+    }
 }
