--- a/scss/blocks/_social-list.scss
+++ b/scss/blocks/_social-list.scss
@@ -3,6 +3,19 @@
 
     display: flex;
     gap: 12px;
+    width: fit-content;
+
+    @media(max-width: $breakpoint1024) {
+        margin-top: 0;
+
+        position: absolute;
+        top: 44px;
+        right: 24px;
+    }
+    @media(max-width: $breakpoint660) {
+        top: 30px;
+        right: 12px;
+    }
 
     &__item {
         display: flex;
@@ -19,6 +32,11 @@
 
             transition: all .3s;
 
+            @media(max-width: $breakpoint480) {
+                width: 40px;
+                height: 40px;
+            }
+
             &:hover {
                 background: rgb(100%, 44%, 0%, .3);
                 border-color: $main-color;
@@ -27,6 +45,10 @@
             & svg {
                 fill: #F0F0EF;
                 max-width: 27px;
+
+                @media(max-width: $breakpoint480) {
+                    max-width: 21px;
+                }
             }
         }
     }
