--- a/scss/blocks/_swiper-groups.scss
+++ b/scss/blocks/_swiper-groups.scss
@@ -3,6 +3,10 @@
     align-items: center;
     gap: 15px;
 
+    @media(max-width: $breakpoint768) {
+        display: contents;
+    }
+
     &__btn {
         display: flex;
         justify-content: center;
@@ -40,6 +44,12 @@
         & svg {
             fill: $black;
             transition: transform .3s;
+        }
+    }
+
+    &-next {
+        @media(max-width: $breakpoint768) {
+            order: 3;
         }
     }
 }
