--- a/scss/blocks/_swiper-products.scss
+++ b/scss/blocks/_swiper-products.scss
@@ -1,9 +1,15 @@
 .swiper-products {
+    display: flex;
+    flex-direction: column;
 
     &__top {
         display: flex;
         align-items: center;
         justify-content: space-between;
+
+        @media(max-width: $breakpoint768) {
+            display: contents;
+        }
 
         &-title {
             font-weight: 800;
@@ -11,16 +17,43 @@
             line-height: 130%;
             text-transform: uppercase;
             color: $black;
+
+            @media(max-width: $breakpoint480) {
+                font-size: 36px;
+            }
+            @media(max-width: $breakpoint375) {
+                font-size: 32px;
+            }
         }
         &-right {
             display: flex;
             align-items: center;
             gap: 25px;
+
+            @media(max-width: $breakpoint768) {
+                margin: 40px  auto 0;
+
+                max-width: 360px;
+                width: 100%;
+                justify-content: space-between;
+
+                order: 3;
+            }
+            @media(max-width: $breakpoint480) {
+                margin-top: 28px;
+            }
         }
     }
 
     &__wrapper {
         margin-top: 40px;
+
+        @media(max-width: $breakpoint768) {
+            order: 2;
+        }
+    }
+
+    &__slide {
 
     }
 }
