--- a/scss/blocks/_tabs.scss
+++ b/scss/blocks/_tabs.scss
@@ -1,6 +1,13 @@
 .tabs {
     margin-top: 100px;
 
+    @media(max-width: $breakpoint1024) {
+        margin: 0 auto 0;
+
+        max-width: 570px;
+        width: 100%;
+    }
+
     &__list {
         display: flex;
         width: fit-content;
@@ -19,12 +26,19 @@
             color: #9a9a98;
 
             cursor: pointer;
+
+            @media(max-width: $breakpoint480) {
+                font-size: 16px;
+            }
         }
     }
 
     &__wrapper {
         margin-top: 32px;
 
+        @media(max-width: $breakpoint660) {
+            margin-top: 20px;
+        }
     }
     &__content {
         display: none;
