--- a/scss/main.scss
+++ b/scss/main.scss
@@ -39,6 +39,12 @@
 @import "./blocks/properties-card";
 @import "./blocks/simplebar-scrollbar";
 @import "./blocks/fast-view-btn";
+@import "./blocks/fast-fiew-modal";
+@import "./blocks/fast-view-block";
+@import "./blocks/swiper-fast-view";
+@import "./blocks/fast-view-hits";
+@import "./blocks/fast-view-properties";
+@import "./blocks/fast-view-btns-group";
 @import "./blocks/ui";
 // Custom
 @import "./blocks/custom-checkbox";
