--- a/scss/blocks/_modal.scss
+++ b/scss/blocks/_modal.scss
@@ -1,6 +1,4 @@
 .modal {
-    $modal-width: 1080px;
-
     opacity: 0;
 
     &.active {
@@ -22,69 +20,19 @@
         z-index: 8;
         pointer-events: none;
 
-
-        &--form {
-            max-width: $modal-width;
-            width: 100%;
-    
-            @media(max-width: calc($modal-width + 20px)) {
-                max-width: 98vw;
-            }
-            @media(max-width: $breakpoint768) {
-                max-width: 100%;
-            }
+        @media(max-width: $breakpoint992) {
+            top: 50px;
+            bottom: 20px;
+            translate: -50% 0;
         }
     }
 
     &__wrapper {
         position: relative;
-        background: $main-color;
-        border-radius: 40px;
-
-        &--form {
-            padding: 60px;
-
-            @media(max-width: $breakpoint1024) {
-                padding: 40px;
-            }
-            @media(max-width: $breakpoint768) {
-                padding: 95px 20px;
-                border-radius: 0;
-            }
-            @media(max-width: $breakpoint480) {
-                min-height: 100dvh;
-            }
-        }
+        background: #F8F8F8;
+        border-radius: 20px;
     }
 
-    &__header {
-        width: calc((640px / 960px) * 100%);
-
-        @media(max-width: $breakpoint768) {
-            width: 100%;
-        }
-    }
-    &__title {
-        @media(max-width: $breakpoint1024) {
-            font-size: 36px;
-        }
-    }
-    &__text {
-        margin-top: 20px;
-
-        font-weight: 500;
-        font-size: 20px;
-        line-height: 150%;
-        color: $text-color;
-
-        @media(max-width: $breakpoint1024) {
-            margin-top: 10px;
-            font-size: 16px;
-        }
-        @media(max-width: $breakpoint480) {
-            font-size: 14px;
-        }
-    }
     &::before {
         content: '';
         position: fixed;
@@ -104,13 +52,11 @@
 .close-modal {
     display: flex;
     position: absolute;
-    top: 40px;
-    right: 40px;
+    top: 36px;
+    right: 28px;
 
-    @media(max-width: $breakpoint768) {
-        width: 12px;
-    }
     @media(max-width: $breakpoint480) {
+        width: 12px;
         top: 24px;
         right: 24px;
     }
