--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@
 @import "./blocks/dropdown-toggle";
 @import "./blocks/header-search";
 @import "./blocks/header-contacts";
+@import "./blocks/header-mobile";
 @import "./blocks/footer";
 @import "./blocks/footer-menu";
 @import "./blocks/footer-grid";
