--- a/css/main.css
+++ b/css/main.css
@@ -574,6 +574,7 @@ h1 {
   position: relative;
   width: 24px;
   height: 16px;
+  z-index: 7;
 }
 @media (max-width: 992px) {
   .btn-menu {
@@ -617,6 +618,9 @@ h1 {
 .btn-menu--open {
   height: 24px;
   overflow: hidden;
+}
+.btn-menu--open span {
+  background: #fff;
 }
 .btn-menu--open span:first-child {
   display: block;
@@ -698,9 +702,15 @@ h1 {
   overflow: hidden;
 }
 @media (max-width: 992px) {
-  .header-search {
+  .header-search--desktop {
     display: none;
   }
+}
+.header-search--mobile {
+  margin-top: 20px;
+}
+.header-search--mobile .header-search__input {
+  color: #fff;
 }
 .header-search__input {
   height: inherit;
@@ -907,6 +917,305 @@ h1 {
 }
 .header-contacts__dropdown-link:hover {
   background: #fafafa;
+}
+
+.header-mobile {
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 6;
+  padding: 9px 12px 60px 12px;
+  overflow-y: scroll;
+  height: 100dvh;
+  width: 100%;
+  background-image: url(../assets/img/bg/f-bg.png);
+  background-color: #F8F8F8;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+@media (max-width: 480px) {
+  .header-mobile {
+    background-image: url(../assets/img/bg/mobile-bg.png);
+  }
+}
+.header-mobile.active {
+  display: block;
+}
+.header-mobile__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+}
+.header-mobile__top-description {
+  position: relative;
+  padding-left: 21px;
+}
+@media (max-width: 480px) {
+  .header-mobile__top-description {
+    padding-left: 17px;
+  }
+}
+.header-mobile__top-description > p {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 110%;
+  text-transform: uppercase;
+  color: #fff;
+  width: 135px;
+}
+@media (max-width: 992px) {
+  .header-mobile__top-description > p {
+    font-size: 12px;
+  }
+}
+@media (max-width: 480px) {
+  .header-mobile__top-description > p {
+    font-size: 10px;
+    width: 100px;
+  }
+}
+.header-mobile__top-description::before {
+  content: "";
+  position: absolute;
+  left: 10px;
+  top: 0;
+  height: 100%;
+  width: 1px;
+  background: #fff;
+}
+.header-mobile__menu {
+  margin-top: 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.header-mobile__menu-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-bottom: 1px solid #9a9a98;
+}
+.header-mobile__menu-item--catalog {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-bottom: 20px;
+}
+.header-mobile__menu-item__toggle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.header-mobile__menu-item__toggle.active .header-mobile__menu-item__toggle-text {
+  color: #FF6F00;
+}
+.header-mobile__menu-item__toggle.active svg {
+  fill: #FF6F00;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+.header-mobile__menu-item__toggle-text {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 130%;
+  color: #fff;
+  pointer-events: none;
+}
+.header-mobile__menu-item__toggle svg {
+  fill: #fff;
+  pointer-events: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.header-mobile__menu-item__link {
+  padding: 20px 0;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 130%;
+  color: #f8f8f8;
+}
+.header-mobile__menu-body {
+  display: grid;
+  grid-template-rows: 0fr;
+  overflow: hidden;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.header-mobile__menu-body.active {
+  margin-top: 14px;
+  grid-template-rows: 1fr;
+}
+.header-mobile__menu-2nd {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 8px;
+  min-height: 0;
+}
+.header-mobile__menu-2nd__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.header-mobile__menu-2nd__item-link {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 120%;
+  color: #f8f8f8;
+}
+.header-mobile__phone {
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 4px;
+}
+.header-mobile__phone-title {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 130%;
+  color: #9a9a98;
+}
+.header-mobile__phone-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 8px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 130%;
+  color: #fff;
+}
+.header-mobile__phone-link::before {
+  content: url(../assets/img/icons/i-phone.svg);
+  height: 17px;
+}
+.header-mobile__container {
+  margin-top: 28px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 12px;
+}
+.header-mobile__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.header-mobile__item-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 130%;
+  color: #9a9a98;
+}
+.header-mobile__col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 8px;
+}
+.header-mobile__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 6px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 130%;
+  color: #fff;
+}
+.header-mobile__link--phone::before {
+  content: url(../assets/img/icons/i-phone.svg);
+  height: 15px;
+}
+.header-mobile__link--mail::before {
+  content: url(../assets/img/icons/i-mail.svg);
+  height: 15px;
+}
+.header-mobile__social-list {
+  margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.header-mobile__social-list__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.header-mobile__social-list__item a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid rgba(154, 154, 152, 0.89);
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.header-mobile__social-list__item a:hover {
+  background: rgba(255, 112, 0, 0.3);
+  border-color: #FF6F00;
+}
+.header-mobile__social-list__item a svg {
+  fill: #F0F0EF;
+  max-width: 21px;
 }
 
 .footer {
