--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,8 @@
 @import "./blocks/modal";
 @import "./blocks/menu";
 @import "./blocks/menu-nav";
+@import "./blocks/menu-dropdown";
+@import "./blocks/menu-subsection";
 @import "./blocks/dropdown-toggle";
 @import "./blocks/header-search";
 @import "./blocks/header-contacts";
@@ -46,6 +48,23 @@
 @import "./blocks/fast-view-hits";
 @import "./blocks/fast-view-properties";
 @import "./blocks/fast-view-btns-group";
+@import "./blocks/product-detail";
+@import "./blocks/swiper-product";
+@import "./blocks/product-hits";
+@import "./blocks/product-properties";
+@import "./blocks/product-btns-group";
+@import "./blocks/breadcrumb";
+@import "./blocks/product-description";
+@import "./blocks/characteristics";
+@import "./blocks/characteristics-list";
+@import "./blocks/delivery";
+@import "./blocks/video";
+@import "./blocks/gallery";
+@import "./blocks/swiper-gallery";
+@import "./blocks/swiper-review";
+@import "./blocks/review";
+@import "./blocks/review-card";
+@import "./blocks/btn-without-container";
 @import "./blocks/ui";
 // Custom
 @import "./blocks/custom-checkbox";
