--- a/scss/blocks/_banner.scss
+++ b/scss/blocks/_banner.scss
@@ -193,7 +193,7 @@
         bottom: -39px;
         left: 50%;
         transform: translateX(-50%);
-        width: 100%;
+        width: fit-content;
 
         @media(max-width: $breakpoint768) {
             position: relative;
