--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -2,6 +2,7 @@
     position: relative;
 
     &__wrapper {
+        position: relative;
         display: flex;
         flex-direction: column;
 
@@ -10,6 +11,7 @@
 
         @media(max-width: $breakpoint992) {
             padding: 9px 0;
+            position: static;
         }
     }
 
