--- a/scss/blocks/_section.scss
+++ b/scss/blocks/_section.scss
@@ -61,3 +61,89 @@
         padding: 54px 0 28px;
     }
 }
+
+.breadcrumb-section {
+    padding: 20px 0 32px;
+
+    @media(max-width: $breakpoint768) {
+        padding: 16px 0 12px;
+    }
+    @media(max-width: $breakpoint480) {
+        padding: 14px 0;
+    }
+}
+
+.product-detail-section {
+    padding-bottom: 80px;
+
+    @media(max-width: $breakpoint768) {
+        padding-bottom: 40px;
+    }
+    @media(max-width: $breakpoint480) {
+        padding-bottom: 20px;
+    }
+}
+
+.description-section {
+    padding: 54px 0;
+
+    background: url(../assets/img/bg/description-bg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+    @media(max-width: $breakpoint768) {
+        padding: 36px 0;
+    }
+    @media(max-width: $breakpoint480) {
+        padding: 20px 0 40px;
+    }
+}
+
+.characteristics-section {
+    padding: 26px 0 54px;
+
+    @media(max-width: $breakpoint768) {
+        padding: 36px 0;
+    }
+    @media(max-width: $breakpoint480) {
+        padding: 30px 0;
+    }
+}
+
+.delivery-section {
+    padding: 26px 0 48px;
+
+    @media(max-width: $breakpoint768) { 
+        padding: 36px 0;
+    }
+    @media(max-width: $breakpoint480) { 
+        padding: 36px 0;
+    }
+}
+
+.video-section {
+    padding: 50px 0 146px;
+
+    @media(max-width: $breakpoint1024) { 
+        padding: 36px 0;
+    }
+    @media(max-width: $breakpoint480) { 
+        padding: 24px 0 60px;
+    }
+}
+
+.gallery-section {
+    padding: 42px 0;
+}
+
+.review-section {
+    padding: 42px 0;
+
+    @media(max-width: $breakpoint768) { 
+        padding: 28px 0;
+    }
+    @media(max-width: $breakpoint480) { 
+        padding: 16px 0;
+    }
+}
